1) Changed OpenAPI Generator to OpenAPI Processor to generate DTO Records instead of POJOs 2) Added structure of service and controller classes
